<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity" android:orientation="vertical" android:background="#FFCCCCCC" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/clickedImageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="setTxt(PicClk)"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="22pt"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/clickedImage"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout android:orientation="horizontal" android:layout_height="50dp" android:layout_width="wrap_content" android:layout_gravity="center">

        <ImageButton android:layout_height="fill_parent" android:layout_width="wrap_content" android:id="@+id/new_btn" android:src="@drawable/clearpage" android:contentDescription="@string/start_new"/>

        <ImageButton android:layout_height="fill_parent" android:layout_width="wrap_content" android:id="@+id/draw_btn" android:src="@drawable/brush" android:contentDescription="@string/brush"/>

        <ImageButton android:layout_height="fill_parent" android:layout_width="wrap_content" android:id="@+id/erase_btn" android:src="@drawable/eraser" android:contentDescription="@string/erase"/>

        <ImageButton android:layout_height="fill_parent" android:layout_width="wrap_content" android:id="@+id/save_btn" android:src="@drawable/save" android:contentDescription="@string/save"/>

    </LinearLayout>
    ##cant run because of this package being wrong. maybe one of you know.
    <com.introtoandroid.coloringbook2 android:background="#FFFFFFFF" android:layout_height="0dp" android:layout_width="fill_parent" android:id="@+id/drawing" android:layout_weight="1" android:layout_marginTop="3dp" android:layout_marginRight="5dp" android:layout_marginLeft="5dp" android:layout_marginBottom="3dp"/>


    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center">

        <!-- Top Row -->

        <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/paint_colors">

            <ImageButton android:background="#FF660000" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FF660000" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FFFF0000" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FFFF0000" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FFFF6600" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FFFF6600" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FFFFCC00" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FFFFCC00" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FF009900" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FF009900" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FF009999" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FF009999" android:onClick="paintClicked" android:layout_margin="2dp"/>

        </LinearLayout>

        <!-- Bottom Row -->

        <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content">

            <ImageButton android:background="#FF0000FF" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FF0000FF" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FF990099" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FF990099" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FFFF6666" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FFFF6666" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FFFFFFFF" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FFFFFFFF" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FF787878" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FF787878" android:onClick="paintClicked" android:layout_margin="2dp"/>

            <ImageButton android:background="#FF000000" android:layout_height="@dimen/large_brush" android:layout_width="@dimen/large_brush" android:src="@drawable/paint" android:contentDescription="@string/paint" android:tag="#FF000000" android:onClick="paintClicked" android:layout_margin="2dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>